# codeslayer.snippets-plugin

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  snippets.codeslayer-plugin.in
src/: Makefile.am  Makefile.in  snippets-config.c  snippets-config.h  snippets-dialog.c  snippets-dialog.h  snippets-engine.c  snippets-engine.h  snippets-plugin.c
