lib_LTLIBRARIES = libsnippetscodeslayerplugin.la

libsnippetscodeslayerplugin_la_SOURCES = \
    snippets-engine.h \
    snippets-engine.c \
    snippets-dialog.h \
    snippets-dialog.c \
    snippets-config.h \
    snippets-config.c \
    snippets-plugin.c

libsnippetscodeslayerplugin_la_CPPFLAGS = $(SNIPPETSCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
